front-gateway/src/components/ApartmentForm/UploadApartmentForm.scss
@import '../sharedStyles/variables.scss';
@import "../sharedStyles/bsvars.scss";

.upload-apt-wrapper {
  background-color: $gray-lighter;
  height: 100%;
  padding: 0;

  button.btn-submit {
    background-color: #1cb039;
    border: transparent;
    color: #fff;
    display: block;
  }
}

.form-section {
  position: relative;

  &::before {
    background-color: darken($gray-lighter, 10%);
    content: '';
    display: block;
    height: 1px;
    margin-bottom: 30px;
    margin-right: -65px;
    margin-top: 15px;
    width: 130%;
  }

  .checkbox {
    margin-bottom: 0;
    margin-top: 0;
  }
}

.form-section:first-child::before {
  content: '';
  width: 0%;
  margin-top: 0;
  margin-bottom: 0;
}

.thumb {
  margin-bottom: 20px;
}

.thumb-inner {
  background: #fff;
  border: 1px solid $gray-light;
  border-radius: $border-radius-base;
  height: 190px;

  .plus {
    display: inline-block;
    font-size: 60px;
    line-height: 190px;
    text-align: center;
    width: 100%;
  }

  .upload-photo {
    bottom: 5px;
    left: 25px;
    position: absolute;
  }

  .add-photo {
    display: inline-block;
    line-height: 190px;
    text-align: center;
    width: 100%;
  }

  &.add {
    background-color: #e6dafe;
    border: 0;
  }
}

.upload-apt-right-container {
  @include gradient-directional($start-color: #8D48C5, $end-color: #9078CC, $deg: 45deg);

  color: $brand-white;
  text-align: center;

  @media (min-width: $screen-md-min) {
    display: table;
    height: 100%;

    > img {
      bottom: 50px;
      height: 20%;
      left: 30px;
      position: absolute;
    }
  }

  @media (max-width: $screen-sm-max) {
    > img {
      height: 60px;
    }
  }

  @media (max-width: $screen-sm-max) {
    padding-bottom: 10px;
  }
}

.upload-apt-right-container-text-wrapper {
  text-align: center;
  vertical-align: middle;

  @media (min-width: $screen-md-min) {
    display: table-cell;
  }
}

.upload-apt-right-container-text-container {
  display: inline-block;
  text-align: right;

  > h1 {
    font-weight: 900;

    @media (max-width: $screen-sm-max) {
      font-weight: 400;
    }

    @media (max-width: $screen-xs-max) {
      font-size: 34px;
    }
  }

  > ul {
    font-size: $font-size-large * 0.9;
    list-style-position: inside !important;
    opacity: 0.8;
    padding: 0;
    width: 298px;

    > li::before {
      content: "";
      display: inline-block;
      margin-right: -7px;
    }

    &.upload-apt-right-container-step3-text-ul {
      width: 356px;

      @media (max-width: 383px) {
        width: auto;
      }
    }
  }
}

.form-section-headline {
  opacity: 0.5;
  text-align: center;
  white-space: nowrap;
  width: 100%;
}

.upload-apt-left-container {
  background-color: $gray-lighter;
  overflow-x: hidden;
  padding: 20px 40px;

  > .form-vertical input {
    font-size: 14px;
  }

  @media (min-width: $screen-md-min) {
    height: calc(100% - 70px);
    overflow-y: auto;

    > .form-vertical {
      padding-right: 8%;
    }

    .form-section-headline {
      @include rotate(90deg);

      position: absolute;
      right: -56.5%;
      top: 50%;
    }
  }

  @media (max-width: $screen-sm-max) {
    margin-bottom: 70px;
    overflow-y: hidden;

    .form-section-headline {
      padding-bottom: 15px;
    }

    > .form-vertical {
      padding-top: 10px;
    }

    > .photos-upload,
    > .form-vertical {
      padding-bottom: 70px;
    }
  }

  .checkbox-inline {
    margin: 0;
  }
}

.upload-apt-left-container-description {
  width: 100%;

  @media (max-width: $screen-xs-max) {
    min-height: 112px;
  }
}

.form-nav.bottom {
  background-color: #fff;
  border-top: 1px solid lighten($gray-base, 60%);
  bottom: 0;
  box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
  height: 69px;
  left: 0;
  padding: 15px;
  position: fixed;
  text-align: center;
  z-index: 999;

  > span {
    display: inline-block;
    line-height: 38px;
  }

  .prev-step,
  .next-step {
    cursor: pointer;
    opacity: 0.8;

    &:hover {
      opacity: 1;
    }
  }

  .prev-step {
    float: right;

    > i {
      vertical-align: middle;
    }
  }

  .next-step {
    float: left;
  }

  .step-btn {
    background-color: #1cb039;
    border: transparent;
    color: #fff;
    display: inline-block;
    float: left;
    font-style: normal;
    min-height: 38px;
    min-width: 130px;
    padding-bottom: 4px;
    padding-top: 6px;
  }

  .apartment-pictures-next-step,
  .apartment-details-next-step {
    vertical-align: middle;
  }
}

.img-full {
  height: 100%;
  object-fit: cover;
  width: 100%;
}

.uploaded-image {
  display: inline;
}

